Rework pkg-config files to move things to private
Clean up all the libraries so that when linking against gensio
libraries, the libraries that the gensio libraries need are not
required.

Found by Felix Kaechele, who found that you couldn't build ser2net
against gensio if libavahi-client-dev wasn't installed.

Signed-off-by: Corey Minyard <minyard@acm.org>

--- a/c++/lib/libgensiocpp.pc.in
+++ b/c++/lib/libgensiocpp.pc.in
@@ -6,4 +6,4 @@ includedir=@includedir@
 Name: libgensiocpp
 Description: A C++ library wrapper around gensio
 Version: @VERSION@
-Libs: -L${libdir} -lgensiocpp -lgensio -lgensioosh @LIBS@
+Libs: -L${libdir} -lgensiocpp -lgensio -lgensioosh
