--- a/tcl/libgensiotcl.pc.in
+++ b/tcl/libgensiotcl.pc.in
@@ -6,4 +6,5 @@ includedir=@includedir@
 Name: libgensioglib
 Description: A library to abstract stream I/O like serial port, TCP, telnet, UDP, SSL, IPMI SOL, etc.
 Version: @VERSION@
-Libs: -L${libdir} -lgensiotcl -lgensio @LIBS@
+Libs: -L${libdir} -lgensiotcl -lgensio
+Libs.private: @TCL_LIBS@
