--- a/lib/libgensioosh.pc.in
+++ b/lib/libgensioosh.pc.in
@@ -7,4 +7,4 @@ Name: libgensiomdns
 Description: A gensiolibrary to abstract MDNS interfaces
 Version: @VERSION@
 Libs: -L${libdir} -lgensioosh -lgensio
-Libs.private: @MDNS_LIBS@
+Libs.private: @OSH_LIBS@
