--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -46,6 +46,9 @@ EXTRA_DIST = utils.py ipmisimdaemon.py termioschk.py \
 	test_fuzz_setup.py make_keys $(PYTESTS) $(OOMTESTS) \
 	gensios_enabled.py.in
 
+# Enable bitflips and such.
+FUZZ_FLAGS = -D
+
 #
 # If you get certauth fuzz failures, they will be in the
 # fuzz-results-certauth/crashes or fuzz-results-certauth/hangs directories.
@@ -64,7 +67,7 @@ test_fuzz_certauth:
 		'certauth(cert=ca/clientcert.pem,key=ca/clientkey.pem,allow-unencrypted)'\
 		'certauth(CA=ca/clientcert.pem,allow-unencrypted)' \
 		fuzz-test-certauth/tracefile
-	afl-fuzz -T certauth -i fuzz-test-certauth -o fuzz-results-certauth \
+	afl-fuzz -T certauth $(FUZZ_FLAGS) -i fuzz-test-certauth -o fuzz-results-certauth \
 		-f certauth-infile \
 		$(top_builddir)/tools/gensiot --dummyrand certauth-randfile \
 		-i echo \
@@ -86,7 +89,7 @@ test_fuzz_mux:
 	$(LOG_COMPILER) $(top_srcdir)/tests/test_fuzz_setup.py \
 		$(top_builddir)/tools/gensiot mux-randfile \
 		'mux' 'mux' fuzz-test-mux/tracefile
-	afl-fuzz -T mux -i fuzz-test-mux -o fuzz-results-mux -f mux-infile \
+	afl-fuzz -T mux $(FUZZ_FLAGS) -i fuzz-test-mux -o fuzz-results-mux -f mux-infile \
 		$(top_builddir)/tools/gensiot --dummyrand mux-randfile \
 		-i echo \
 		"mux(writebuf=10000,mode=server),file(infile=mux-infile)"
@@ -109,7 +112,7 @@ test_fuzz_ssl:
 		'ssl(CA=ca/CA.pem)'\
 		'ssl(key=ca/key.pem,cert=ca/cert.pem)' \
 		fuzz-test-ssl/tracefile
-	afl-fuzz -T ssl -i fuzz-test-ssl -o fuzz-results-ssl -f ssl-infile \
+	afl-fuzz -T ssl $(FUZZ_FLAGS) -i fuzz-test-ssl -o fuzz-results-ssl -f ssl-infile \
 		$(top_builddir)/tools/gensiot --dummyrand ssl-randfile \
 		-i echo \
 		"ssl(key=ca/key.pem,cert=ca/cert.pem,mode=server),file(infile=ssl-infile)"
@@ -130,7 +133,7 @@ test_fuzz_telnet:
 	$(LOG_COMPILER) $(top_srcdir)/tests/test_fuzz_setup.py \
 		$(top_builddir)/tools/gensiot telnet-randfile \
 		'telnet' 'telnet' fuzz-test-telnet/tracefile
-	afl-fuzz -T telnet \
+	afl-fuzz -T telnet $(FUZZ_FLAGS) \
 		-i fuzz-test-telnet -o fuzz-results-telnet -f telnet-infile \
 		$(top_builddir)/tools/gensiot --dummyrand telnet-randfile \
 		-i echo "telnet(mode=server),file(infile=telnet-infile)"
@@ -151,7 +154,7 @@ test_fuzz_relpkt:
 	$(LOG_COMPILER) $(top_srcdir)/tests/test_fuzz_setup.py \
 		$(top_builddir)/tools/gensiot relpkt-randfile \
 		'relpkt,msgdelim(crc=off)' 'relpkt,msgdelim(crc=off)' fuzz-test-relpkt/tracefile
-	afl-fuzz -T relpkt \
+	afl-fuzz -T relpkt $(FUZZ_FLAGS) \
 		-i fuzz-test-relpkt -o fuzz-results-relpkt -f relpkt-infile \
 		$(top_builddir)/tools/gensiot --dummyrand relpkt-randfile \
 		-i echo "relpkt(mode=server),msgdelim(crc=off),file(infile=relpkt-infile)"
