Fix detection on MDNS on mingw32
For some reason AC_CHECK_LIB() doesn't work for detecting it on mingw32.
It works fine on mingw64, not sure what the difference is.

So write custom detection code for it.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/configure.ac
+++ b/configure.ac
@@ -894,7 +894,15 @@ if test $trymdns = yes -a ${HAVE_AVAHI} = 0 -a ${HAVE_DNSSD} = 0 \
    found_windns=no
    AC_CHECK_HEADER(windns.h, [found_windns=yes], [], [#include <windows.h>])
    if test "x$found_windns" = "xyes"; then
-      AC_CHECK_LIB(dnsapi, DnsServiceBrowse, [HAVE_WINMDNS=1])
+       # AC_CHECK_LIB() doesn't work on DnsServiceBrowse() on mingw32,
+       # for some reason it won't compile without includeing windns.h.
+       AC_LANG(C)
+       AC_MSG_CHECKING([for MDNS support in Windows])
+       AC_COMPILE_IFELSE(
+	   [AC_LANG_PROGRAM([[#include <windows.h>
+#include <windns.h>]],
+			    [[DnsServiceBrowse(NULL, NULL);]])],
+	   [HAVE_WINMDNS=1; AC_MSG_RESULT([yes])], [AC_MSG_RESULT([no])])
    fi
    if test "$HAVE_WINMDNS" = "1"; then
       mdns=$default_all
