Export CXX for Go
So that go gets the right C++ compiler.

Signed-off-by: Corey Minyard <minyard@acm.org>

--- a/c++/swig/go/tests/Makefile.am
+++ b/c++/swig/go/tests/Makefile.am
@@ -51,6 +51,7 @@ endif
 if BUILTIN_IPMISOL
 MORE_LIBS += $(OPENIPMI_LIBS)
 endif
+export CXX
 export CGO_CXXFLAGS = $(CXXFLAGS) $(AM_CXXFLAGS) \
 	-I$(top_srcdir)/c++/swig/include
 export CGO_CPPFLAGS = $(CPPFLAGS) -I$(top_srcdir)/c++/swig/include
