tests: Fix the mdns check
Use HAVE_MDNS, not HAVE_AVAHI

Signed-off-by: Corey Minyard <minyard@acm.org>

--- a/tests/gensios_enabled.py.in
+++ b/tests/gensios_enabled.py.in
@@ -22,7 +22,7 @@ gensios_enabled = {
     "trace": 1,
     "conacc": 1,
     "perf": 1,
-    "mdns": @HAVE_AVAHI@,
+    "mdns": @HAVE_MDNS@,
     "ax25": 1,
     "ratelimit": 1
 }
