Export CC for the go build
Make sure it gets the right command for CC.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/c++/swig/go/tests/Makefile.am
+++ b/c++/swig/go/tests/Makefile.am
@@ -52,6 +52,7 @@ if BUILTIN_IPMISOL
 MORE_LIBS += $(OPENIPMI_LIBS)
 endif
 export CXX
+export CC
 export CGO_CXXFLAGS = $(CXXFLAGS) $(AM_CXXFLAGS) \
 	-I$(top_srcdir)/c++/swig/include
 export CGO_CPPFLAGS = $(CPPFLAGS) -I$(top_srcdir)/c++/swig/include
