github: Add swig and openssl to the macos installs
They weren't there on macos 13.

Signed-off-by: Corey Minyard <minyard@acm.org>

--- a/.github/workflows/macosbuild.yml
+++ b/.github/workflows/macosbuild.yml
@@ -21,6 +21,8 @@ jobs:
           brew install libtool
           brew install autoconf
           brew install automake
+          brew install swig
+          brew install openssl
       - name: Configure
         run: |
           mkdir $INSTALLPREFIX
