--- a/c++/swig/go/tests/runtest.in
+++ b/c++/swig/go/tests/runtest.in
@@ -44,15 +44,22 @@ if [ ! -x ${TEST} ]; then
     exit 1
 fi
 
-LD_LIBRARY_PATH=${BUILDDIR}/c++/lib/.libs:${BUILDDIR}/lib/.libs
+# We need to put the DLL in PATH for MSYS on Windows
+if [ ! -z "$MSYSTEM" ]; then
+    export PATH=${BUILDDIR}/lib:${BUILDDIR}/lib/.libs:$PATH:${BUILDDIR}/c++/swig/python/.libs:${BUILDDIR}/glib/.libs:${BUILDDIR}/glib/c++/swig/pygensio/.libs:${BUILDDIR}/tcl/.libs:${BUILDDIR}/tcl/c++/swig/pygensio/.libs
+else
+    export LD_LIBRARY_PATH=${BUILDDIR}/lib:${BUILDDIR}/lib/.libs:${BUILDDIR}/c++/swig/python/.libs:${BUILDDIR}/glib/.libs:${BUILDDIR}/glib/c++/pygensio/.libs:${BUILDDIR}/tcl/.libs:${BUILDDIR}/tcl/c++/pygensio/.libs:${BUILDDIR}/c++/lib/.libs
+fi
+if test `uname` = Darwin; then
+    TEST="DYLD_LIBRARY_PATH=${LD_LIBRARY_PATH} ${TEST}"
+fi
 
 if ${PRINT_MODE}; then
     echo export LD_LIBRARY_PATH="${LD_LIBRARY_PATH}"
     echo ${TEST} $*
 else
     # Run the test with each available OS handler
-    export LD_LIBRARY_PATH="${LD_LIBRARY_PATH}"
-    ${TEST} $*
+    eval "${TEST} $*"
     rv=$?
     if test $rv != 0; then
         # A test failed, exit
