--- a/glib/c++/swig/pygensio/Makefile.am
+++ b/glib/c++/swig/pygensio/Makefile.am
@@ -26,7 +26,7 @@ _pygensioglib_la_LIBADD = $(top_builddir)/c++/lib/libgensiocpp.la \
 		$(top_builddir)/lib/libgensio.la $(top_builddir)/glib/libgensioglib.la \
 		$(OPENSSL_LIBS) $(PYTHON_LIBS)
 _pygensioglib_la_LDFLAGS = -module -avoid-version $(OPENSSL_LDFLAGS) \
-		-no-undefined
+		-no-undefined $(PYTHON_EXT_EXT_SET)
 
 clean-local:
 	rm -rf __pycache__ pygensioglib_wrap.cc pygensioglib_wrap.h \
@@ -38,5 +38,5 @@ install-exec-local: _pygensioglib.la pygensioglib.py
 
 uninstall-local:
 	$(LIBTOOL) --mode=uninstall \
-		rm -f "$(DESTDIR)$(PYTHON_INSTALL_LIB_DIR)/_pygensioglib.so"
+		rm -f "$(DESTDIR)$(PYTHON_INSTALL_LIB_DIR)/_pygensioglib.$(PYTHON_EXT_EXT)"
 	rm -f "$(DESTDIR)$(PYTHON_INSTALL_DIR)/pygensioglib.py"
